<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/the_art_museum"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/the_art_museum"
            android:textSize="10sp"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/shop"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/shop"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <ImageButton
            android:id="@+id/buttonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_menu"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/watch_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/watch_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/the_art_museum"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/braun_classic_watch"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/watch_image"/>

        <TextView
            android:id="@+id/description_watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/test_long_string"
            android:textColor="@color/colorTextLigth"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_goneMarginLeft="16dp" />

        <TextView
            android:id="@+id/watch_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_value"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/description_watch"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/watch_price_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_value_description"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/watch_value"
            android:textStyle="bold"
            android:textColor="@color/colorTextLigth"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/addToCart"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_to_cart"
            app:layout_constraintTop_toBottomOf="@id/watch_price_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@android:color/holo_red_light"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_drawer"/>
</android.support.v4.widget.DrawerLayout>